--- a/packages/recomponents/src/components/r-button/r-button.scss
+++ b/packages/recomponents/src/components/r-button/r-button.scss
@@ -144,6 +144,29 @@
         }
     }
 
+    &--type-link {
+        color: #0044D4;
+        vertical-align: baseline;
+        padding: 0;
+        background: none;
+        box-shadow: none;
+
+        &:hover {
+            background: none;
+            text-decoration: underline;
+            box-shadow: none;
+        }
+
+        &:focus {
+            box-shadow: 0 0 0 2px rgba(0, 68, 212, 0.5);
+        }
+
+        &:active {
+            background: none;
+            box-shadow: 0 1px 3px 1px var(--red-color-dark) inset;
+        }
+    }
+
     &--fluid {
         width: 100%;
     }
