--- a/packages/recomponents/src/styles/theme.scss
+++ b/packages/recomponents/src/styles/theme.scss
@@ -481,6 +481,7 @@ body, .article {
     --tile-subtitle-padding-bottom: var(--space-default);
     --tile-content-padding: var(--space-default);
     --tile-content-divider: 1px solid var(--gray-color-light);
+    --tile-content-background: var(--mono-color-0);
     --tile-content-secondary-background: var(--background-color-light);
     --tile-actions-padding: var(--space-default);
 
