style(button): small css issue

--- a/packages/recomponents/src/components/r-button/r-button.scss
+++ b/packages/recomponents/src/components/r-button/r-button.scss
@@ -18,6 +18,10 @@
     outline: none;
     transition: var(--button-transition);
 
+    &:hover {
+        text-decoration: none;
+    }
+
     &--size-small {
         padding: var(--button-size-s);
     }
