--- a/packages/recomponents/src/styles/theme.scss
+++ b/packages/recomponents/src/styles/theme.scss
@@ -508,7 +508,7 @@ body, .article {
     --select-below-border-top: 0;
     --select-border-color: var(--primary-color);
     --select-border-radius: var(--border-radius);
-    --select-caret: url('../../static/icons/caret-down.svg');
+    --select-caret: url('/static/icons/caret-down.svg');
     --select-current-border-color: #E8E8E8;
     --select-current-margin: 0;
     --select-current-padding: var(--space-s) var(--space-l) 0 var(--space-m);
